--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@ body {
   font-family: 'Aquire';
   src: url('../fonts/AquireBold-8Ma60.otf') format('opentype');
 }
+.navBar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 10px;
+}
 .titulo {
   font-family: 'Aquire';
   display: block;
@@ -13,6 +20,12 @@ body {
   color: white;
   font-size: 50px;
   text-align: center;
+}
+.no-bullets {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    color: white;
 }
 .subtitulo {
   color: white;
@@ -67,4 +80,62 @@ body {
   text-align: center;
   padding: 0 2.5px;
 }
-
+.icones {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    padding: 0 2.5px;
+}
+.icoLinkedin {
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 0 2.5px;
+}
+.icoGithub {
+    display: block;
+    width: 65px;
+    height: 65px;
+    padding: 0 2.5px;
+}
+.icoAlura {
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 0 2.5px;
+}
+.infos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    padding: 0 2.5px;
+}
+.info {
+    display: flex;
+}
+.infoEmail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding: 0 2.5px;
+}
+.email {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding: 0 2.5px;
+    text-decoration: none;
+}
+.icoEmail {
+    width: 30px;
+    height: 30px;
+    padding: 0 2.5px;
+}
